--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta name="author" content="TemplateMo">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>Finance Business - About Page</title>
+    <title>SMR Agency</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -45,8 +45,8 @@ https://templatemo.com/tm-545-finance-business
         <div class="row">
           <div class="col-md-8 col-xs-12">
             <ul class="left-info">
-              <li><a href="#"><i class="fa fa-clock-o"></i>Mon-Fri 09:00-17:00</a></li>
-              <li><a href="#"><i class="fa fa-phone"></i>090-080-0760</a></li>
+              <li><a href="#"><i class="fa fa-clock-o"></i>Mon-Sat 09:00-17:00</a></li>
+              <li><a href="#"><i class="fa fa-phone"></i>+255757911916</a></li>
             </ul>
           </div>
           <div class="col-md-4">
@@ -64,7 +64,7 @@ https://templatemo.com/tm-545-finance-business
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="index.html"><h2>Finance Business</h2></a>
+          <a class="navbar-brand" href="index.html"><h2>smr agency</h2></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -96,7 +96,7 @@ https://templatemo.com/tm-545-finance-business
         <div class="row">
           <div class="col-md-12">
             <h1>About Us</h1>
-            <span>We have over 20 years of experience</span>
+            <span></span>
           </div>
         </div>
       </div>
@@ -110,11 +110,11 @@ https://templatemo.com/tm-545-finance-business
               <div class="row">
                 <div class="col-md-6 align-self-center">
                   <div class="right-content">
-                    <span>our solid background on finance</span>
-                    <h2>Get to know about <em>our company</em></h2>
-                    <p>Fusce nec ultrices lectus. Duis nec scelerisque risus. Ut id tempor turpis, ac dignissim ipsum. Nulla ullamcorper, ipsum vel condimentum congue, mi odio vehicula tellus, sit amet malesuada justo sem. 
-                    <br><br>Pellentesque in sagittis lacus, vel auctor sem. Quisque eu quam eleifend, ullamcorper dui nec, luctus quam.</p>
-                    <a href="" class="filled-button">Read More</a>
+                    <span>our solid background in business</span>
+                    <h2>Get to know about <em>SMR Agency</em></h2>
+                    <p>The SMR Agency works with small businesses with less than $1MM in annual revenue and works with them to increase your revenues to $10MM. We dONSULo this by focusing on your internal systems and processes, working on your product and branding, and social media marketing. We also provide employee training and corporate development to assist you in this transition.
+                    <br><br>We have worked with more than 10 companies based in the Middle East go through this transition, and are now going global. With our newest customers coming from the United States, we have the experience to translate our expertise across borders.</p>
+                    <a href="services.html" class="filled-button">Read More</a>
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -128,7 +128,7 @@ https://templatemo.com/tm-545-finance-business
         </div>
       </div>
     </div>
-
+<!-- 
     <div class="team">
       <div class="container">
         <div class="row">
@@ -171,7 +171,7 @@ https://templatemo.com/tm-545-finance-business
         </div>
       </div>
     </div>
-
+  -->
     <div class="fun-facts">
       <div class="container">
         <div class="row">
@@ -181,7 +181,7 @@ https://templatemo.com/tm-545-finance-business
               <h2>Our solutions for your <em>business growth</em></h2>
               <p>Pellentesque ultrices at turpis in vestibulum. Aenean pretium elit nec congue elementum. Nulla luctus laoreet porta. Maecenas at nisi tempus, porta metus vitae, faucibus augue. 
               <br><br>Fusce et venenatis ex. Quisque varius, velit quis dictum sagittis, odio velit molestie nunc, ut posuere ante tortor ut neque.</p>
-              <a href="" class="filled-button">Read More</a>
+              <a href="services.html" class="filled-button">Read More</a>
             </div>
           </div>
           <div class="col-md-6 align-self-center">
@@ -275,7 +275,7 @@ https://templatemo.com/tm-545-finance-business
       <div class="container">
         <div class="row">
           <div class="col-md-3 footer-item">
-            <h4>Finance Business</h4>
+            <h4>SMR Agency</h4>
             <p>Vivamus tellus mi. Nulla ne cursus elit,vulputate. Sed ne cursus augue hasellus lacinia sapien vitae.</p>
             <ul class="social-icons">
               <li><a rel="nofollow" href="https://fb.com/templatemo" target="_blank"><i class="fa fa-facebook"></i></a></li>
@@ -284,7 +284,7 @@ https://templatemo.com/tm-545-finance-business
               <li><a href="#"><i class="fa fa-behance"></i></a></li>
             </ul>
           </div>
-          <div class="col-md-3 footer-item">
+          <!-- <div class="col-md-3 footer-item">
             <h4>Useful Links</h4>
             <ul class="menu-list">
               <li><a href="#">Vivamus ut tellus mi</a></li>
@@ -293,8 +293,8 @@ https://templatemo.com/tm-545-finance-business
               <li><a href="#">Cursus augue hasellus</a></li>
               <li><a href="#">Lacinia ac sapien</a></li>
             </ul>
-          </div>
-          <div class="col-md-3 footer-item">
+          </div> -->
+          <!-- <div class="col-md-3 footer-item">
             <h4>Additional Pages</h4>
             <ul class="menu-list">
               <li><a href="#">About Us</a></li>
@@ -302,6 +302,16 @@ https://templatemo.com/tm-545-finance-business
               <li><a href="#">Quick Support</a></li>
               <li><a href="#">Contact Us</a></li>
               <li><a href="#">Privacy Policy</a></li>
+            </ul>
+          </div> -->
+          <div class="col-md-3 footer-item">
+            <h4>Navigate</h4>
+            <ul class="menu-list">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="services.html">Our Services</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
+              <!-- <li><a href="#">Privacy Policy</a></li> -->
             </ul>
           </div>
           <div class="col-md-3 footer-item last-item">
@@ -341,9 +351,9 @@ https://templatemo.com/tm-545-finance-business
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <p>Copyright &copy; 2020 Financial Business Co., Ltd.
+            <p>Copyright &copy; 2020 SMR Agency. Powered By DotEvolve.
             
-            - Design: <a rel="nofollow noopener" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
+            </p>
           </div>
         </div>
       </div>
