--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@ https://templatemo.com/tm-545-finance-business
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <p>Copyright &copy; 2020 SMR Agency. Powered By <a src="dotevolve.co.in">DotEvolve</a>
+            <p>Copyright &copy; 2020 SMR Agency. Powered By <a target=_blank"" href="dotevolve.co.in">DotEvolve</a>
             
            
           </div> </p>
